[package]
name = "mde"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
ropey = "1.6"
unicode-width = "0.2"
arboard = "3"
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
cosmic-text = "0.12"
ratatui-image = { version = "=10.0.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
ignore = "0.4"
nucleo-matcher = "0.3"
